--- a/保研经验帖/保研经验贴.md
+++ b/保研经验帖/保研经验贴.md
@@ -1,8 +1,9 @@
 这是大三同学参加夏令营和九月份复试的一些博客汇总。大家想着要把这次宝贵的夏令营经历记录一下，好给学弟学妹一个参考。学弟学妹们可以结合自身情况，大概了解一下保研流程，部分学校保研考核要求，从而少走一些弯路，去到自己理想中的学校。
 
 ## 2020夏令营总结贴
-
 - @[墨云沧](https://www.zhihu.com/people/niraliye)的[2020计算机专业保研经验贴](https://zhuanlan.zhihu.com/p/267009034)
+- @[Jipeng416](https://zhuanlan.zhihu.com/p/358182473)的[2020年“工理经管”四大门类保研夏令营混申回忆录（清深、TBSI、计算所、上交电院、北大汇丰等二十余个项目）
+](https://zhuanlan.zhihu.com/p/358182473)
 - @[KID22](https://www.zhihu.com/people/kid-22-32-56)的[计算机保研](https://www.zhihu.com/column/c_1293286348367900672)
 - @[猪儿虫的小仓库](https://www.zhihu.com/people/arong-75-6/posts)的[计算机保研经验帖 清华·北大·上交·复旦·南大](https://zhuanlan.zhihu.com/p/260002988)
 - @[William](https://blog.csdn.net/qq_43413123)的[2020计算机保研经历](https://blog.csdn.net/qq_43413123/article/details/109094823)
